--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-icons": "^3.8.0",
     "react-modal": "^3.11.1",
     "react-toastify": "^5.4.1",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "babel-plugin-styled-components": "^1.10.6"
   },
   "scripts": {
     "dev": "next -p 3001",
@@ -31,8 +32,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "babel-plugin-styled-components": "^1.10.6"
   }
 }
