--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "axios": "^0.19.0",
+    "babel-plugin-styled-components": "^1.10.6",
     "next": "^9.1.4",
     "polished": "^3.4.2",
     "prop-types": "^15.7.2",
@@ -13,8 +14,7 @@
     "react-icons": "^3.8.0",
     "react-modal": "^3.11.1",
     "react-toastify": "^5.4.1",
-    "styled-components": "^4.4.1",
-    "babel-plugin-styled-components": "^1.10.6"
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "dev": "next -p 3001",
